--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0;
     height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url("station.jpg");
     background-size: cover;
@@ -6,15 +7,22 @@ body {
     font-weight: bold;
     text-align: center;
     color: white;
+    font-size: 1.25rem;
 }
-
+.container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 h1 {
+    font-size: 3rem;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 h2 {
-    font-size: 50px;
+    font-size: 3rem;
     margin-top: 0;
     margin-bottom: 20px;
 }
@@ -36,5 +44,8 @@ button {
 
 #save-btn {
     background: darkgreen;
+}
+#clear-btn {
+    color: black;
 }
 
